--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
                 <div class="row">
                     <div class="col-sm-8 col-md-7 py-4">
                         <h4 class="text-white">About</h4>
-                        <p class="text-muted">Add some information about the album below, the author, or any other
-                            background context. Make it a few sentences long so folks can pick up some informative
-                            tidbits. Then, link them off to some social networking sites or contact information.</p>
+                        <p class="text-white">Educated in full stack web development, I’m versed in several languages
+                            and frameworks. As a coding boot camp graduate, I am a proven hard worker and quick learner. With a background in nonprofit and corporate, I am flexible, passionate, and I understand the importance
+                            of delivering the best user experience for clients. </p>
                     </div>
                     <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Contact</h4>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                            <li><a href="#" class="text-white">Like on Facebook</a></li>
-                            <li><a href="#" class="text-white">Email me</a></li>
+                            <li class="text-white"><i class="fas fa-phone icon"></i>719.231.3626</li>
+                            <li class="text-white"><i class="fas fa-envelope-square icon"></i>kaylahmalillos@gmail.com
+                            </li>
+                            <li class="text-white"><i class="fab fa-linkedin icon"></i><a
+                                    href="https://www.linkedin.com/in/kaylahmalillos/" target="_blank"
+                                    class="text-white">Let's Connect</a> </li>
                         </ul>
                     </div>
                 </div>
@@ -56,7 +59,8 @@
                 <p class="lead text-muted">Front-End Web Developer</p>
                 <p>
                     <a href="#demos" class="btn btn-dark my-2">See the Magic</a>
-                    <a href="" class="btn btn-light my-2">The Credentials</a>
+                    <a href="https://drive.google.com/file/d/1EP3wIdaCviSh3qwxlDR7oPMDQ6tJLVsk/view?usp=sharing"
+                        target="_blank" class="btn btn-light my-2">The Credentials</a>
                 </p>
             </div>
         </section>
@@ -94,7 +98,7 @@
                             <img class="card-img-top" src="./assets/imgs/handlebars.png" />
                             <div class="card-body text-center">
                                 <h6>Handlebars</h6>
-                                <p>Utilized Handlebars to create templates and Express for server-side functionality.
+                                <p>Utilized Handlebars to create templates and Node for server-side functionality.
                                 </p>
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
@@ -152,7 +156,7 @@
                             <img class="card-img-top" src="./assets/imgs/inkind.PNG" />
                             <div class="card-body text-center">
                                 <h6>In-Kind Connections</h6>
-                                <p>Text here.</p>
+                                <p>Comprehensive app and database built with React and Node.</p>
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
@@ -176,7 +180,7 @@
                             <img class="card-img-top" src="./assets/imgs/dog-journal.JPG" />
                             <div class="card-body text-center">
                                 <h6>Dog Journal</h6>
-                                <p>Text here.</p>
+                                <p>App with database built with Handlebars and Node.</p>
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
@@ -200,7 +204,7 @@
                             <img class="card-img-top" src="./assets/imgs/portfolio.JPG" />
                             <div class="card-body text-center">
                                 <h6>Portfolio</h6>
-                                <p>Text here.</p>
+                                <p>See more of my work in full stack web development.</p>
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
@@ -225,8 +229,8 @@
                 <a href="#">Back to top</a>
             </p>
             <p>© Kaylah Malillos | 719.231.3626 | kaylahmalillos@gmail.com | <a
-                    href="https://www.linkedin.com/in/kaylahmalillos/" target="_blank">LinkedIn</a> | <a
-                    href="https:/www.kaylahmalillos.com" target="_blank">Portfolio</a>
+                    href="https://www.linkedin.com/in/kaylahmalillos/" target="_blank" class="text-muted">LinkedIn</a> |
+                <a href="https:/www.kaylahmalillos.com" target="_blank" class="text-muted">Portfolio</a>
         </div>
     </footer>
 
