--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            <a href="" target="_blank">
+                                            <a href="https://shaneco-react.herokuapp.com/" target="_blank">
                                                 Live Demo
                                             </a>
                                         </button>
