playing around with links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                     <div class="col-sm-8 col-md-7 py-4">
                         <h4 class="text-white">About</h4>
                         <p class="text-white">Educated in full stack web development, I’m versed in several languages
-                            and frameworks. As a coding boot camp graduate, I am a proven hard worker and quick learner. With a background in nonprofit and corporate, I am flexible, passionate, and I understand the importance
+                            and frameworks. As a coding boot camp graduate, I am a proven hard worker and quick learner.
+                            With a background in nonprofit and corporate, I am flexible, passionate, and I understand
+                            the importance
                             of delivering the best user experience for clients. </p>
                     </div>
                     <div class="col-sm-4 offset-md-1 py-4">
@@ -78,13 +80,13 @@
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            <a href="https://kmalillos.github.io/shaneco-basic/" target="_blank">
-                                                Live Demo
+                                            <a href="https://github.com/kmalillos/shaneco-basic" target="_blank">
+                                                GitHub
                                             </a>
                                         </button>
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            <a href="https://github.com/kmalillos/shaneco-basic" target="_blank">
-                                                GitHub
+                                            <a href="https://kmalillos.github.io/shaneco-basic/" target="_blank">
+                                                Live Demo
                                             </a>
                                         </button>
                                     </div>
@@ -103,13 +105,13 @@
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            <a href="https://shaneco-handlebars.herokuapp.com/" target="_blank">
-                                                Live Demo
+                                            <a href="https://github.com/kmalillos/shaneco-handlebars" target="_blank">
+                                                GitHub
                                             </a>
                                         </button>
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            <a href="https://github.com/kmalillos/shaneco-handlebars" target="_blank">
-                                                GitHub
+                                            <a href="https://shaneco-handlebars.herokuapp.com/" target="_blank">
+                                                Live Demo
                                             </a>
                                         </button>
                                     </div>
@@ -126,14 +128,14 @@
                                 <p>Used React.js library to build UI components.</p>
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            <a href="https://shaneco-react.herokuapp.com/" target="_blank">
-                                                Live Demo
-                                            </a>
-                                        </button>
                                         <button type="button" class="btn btn-sm btn-outline-secondary" target="_blank">
                                             <a href="https://github.com/kmalillos/shaneco-react">
                                                 GitHub
+                                            </a>
+                                        </button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">
+                                            <a href="https://shaneco-react.herokuapp.com/" target="_blank">
+                                                Live Demo
                                             </a>
                                         </button>
                                     </div>
@@ -156,7 +158,7 @@
                             <img class="card-img-top" src="./assets/imgs/inkind.PNG" />
                             <div class="card-body text-center">
                                 <h6>In-Kind Connections</h6>
-                                <p>Comprehensive app and database built with React and Node.</p>
+                                <p>Robust app and database built with React and Node.</p>
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
@@ -180,7 +182,7 @@
                             <img class="card-img-top" src="./assets/imgs/dog-journal.JPG" />
                             <div class="card-body text-center">
                                 <h6>Dog Journal</h6>
-                                <p>App with database built with Handlebars and Node.</p>
+                                <p>Comprehensive app with database built with Handlebars and Node.</p>
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
