--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                         </button>
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
                                             <a href="https://inkindconnections.herokuapp.com/" target="_blank">
-                                                Live Demo
+                                                Live Site
                                             </a>
                                         </button>
                                     </div>
