--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
                 <p class="lead text-muted">Front-End Web Developer</p>
                 <p>
                     <a href="#demos" class="btn btn-dark my-2">See the Magic</a>
-                    <a href="https://drive.google.com/file/d/1EP3wIdaCviSh3qwxlDR7oPMDQ6tJLVsk/view?usp=sharing"
-                        target="_blank" class="btn btn-light my-2">The Credentials</a>
                 </p>
             </div>
         </section>
@@ -75,17 +73,17 @@
                         <div class="card mb-4 shadow-sm">
                             <img class="card-img-top" src="./assets/imgs/html-css.jpg" />
                             <div class="card-body text-center">
-                                <h6>HTML, CSS, and Bootstrap</h6>
-                                <p>Built a basic landing page with Bootstrap and Font Awesome.</p>
+                                <h6>HTML and CSS</h6>
+                                <p>Built a basic landing page with HTML and CSS (no Bootstrap)</p>
                                 <div class="d-flex justify-content-around align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            <a href="https://github.com/kmalillos/shaneco-basic" target="_blank">
+                                            <a href="https://github.com/kmalillos/shaneco-basic-no-bs" target="_blank">
                                                 GitHub
                                             </a>
                                         </button>
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            <a href="https://kmalillos.github.io/shaneco-basic/" target="_blank">
+                                            <a href="https://kmalillos.github.io/shaneco-basic-no-bs/" target="_blank">
                                                 Live Demo
                                             </a>
                                         </button>
@@ -147,7 +145,8 @@
             </div>
         </div>
 
-        <h2 class="text-center">Relevant Experience</h2>
+        <!-- second row -->
+        <h3 class="text-center">Relevant Experience</h3>
 
         <div class="album py-5 bg-light">
             <div class="container">
@@ -168,7 +167,7 @@
                                         </button>
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
                                             <a href="https://inkindconnections.herokuapp.com/" target="_blank">
-                                                Live Site
+                                                Live Demo
                                             </a>
                                         </button>
                                     </div>
@@ -192,13 +191,50 @@
                                         </button>
                                         <button type="button" class="btn btn-sm btn-outline-secondary">
                                             <a href="https://github.com/kmalillos/dog-journal" target="_blank">
-                                                Live Site
+                                                Live Demo
                                             </a>
                                         </button>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm d-flex align-items-stretch">
+                            <img class="card-img-top" src="./assets/imgs/media-queries.JPG" />
+                            <div class="card-body text-center">
+                                <h6>Media Queries</h6>
+                                <p>Using Media Queries to create responsive pages.</p>
+                                <div class="d-flex justify-content-around align-items-center">
+                                    <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">
+                                                    <a href="https://github.com/kmalillos/Responsive-Portfolio" target="_blank">
+                                                        GitHub
+                                                    </a>
+                                                </button>
+                                                <button type="button" class="btn btn-sm btn-outline-secondary">
+                                                    <a href="https://kmalillos.github.io/Responsive-Portfolio/" target="_blank">
+                                                        Live Demo
+                                                    </a>
+                                                </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- third row -->
+        <h3 class="text-center">More Projects</h3>
+
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-4">
                     </div>
 
                     <div class="col-md-4">
@@ -219,6 +255,9 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-md-4">
+                    </div>
                 </div>
             </div>
         </div>
@@ -230,8 +269,10 @@
             <p class="float-right">
                 <a href="#">Back to top</a>
             </p>
-            <p>© Kaylah Malillos | 719.231.3626 | kaylahmalillos@gmail.com | <a
-                    href="https://www.linkedin.com/in/kaylahmalillos/" target="_blank" class="text-muted">LinkedIn</a> |
+            <p>© Kaylah Malillos | 719.231.3626 | kaylahmalillos@gmail.com |
+                <a href="https://drive.google.com/file/d/1EP3wIdaCviSh3qwxlDR7oPMDQ6tJLVsk/view?usp=sharing"
+                    target="_blank" class="text-muted">Resume</a> |
+                <a href="https://www.linkedin.com/in/kaylahmalillos/" target="_blank" class="text-muted">LinkedIn</a> |
                 <a href="https:/www.kaylahmalillos.com" target="_blank" class="text-muted">Portfolio</a>
         </div>
     </footer>
